@@ -1,3 +1,3 @@
 # Military Balance
 
-Fixing recipes balance and nerfing damage a little to make game still interesting.
+Fixing recipes balance and nerfing damage a little to make game still interesting after balance was completely broken by SA platforms saga.
